#ifndef GROUP_H
#define GROUP_H

#include "session.h"

class Group {
private:
    Session *sessions;
};

#endif // GROUP_H
