#ifndef SESSIONTYPE_H
#define SESSIONTYPE_H

enum SessionType { SUB_DELTA, DELTA, THETA, ALPHA };

#endif // SESSIONTYPE_H
